# sdmm

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
benchmarks/: CMakeLists.txt  distributions.cpp  em.cpp  sampling.cpp
ext/jmm/: ._eigen_boost_serialization.h  ._mixture_model.h  ._multivariate_tangent_normal.cpp  ._multivariate_tangent_normal.h  mixture_model.h  multivariate_normal.h
ext/jmm/include/jmm/: mixture_model.h  mixture_model_init.h  multivariate_tangent_normal.h  utils.h
ext/jmm/include/jmm/opt/: stepwise_tangent.h
include/sdmm/accelerators/: dmm_spatial_tree.h  spatial_stats.h  spatial_stats_atomic.h  spatial_tree.h
include/sdmm/core/: constants.h  sdmm_fwd.h  utils.h
include/sdmm/distributions/: categorical.h  dmm_context.h  generalized_categorical.h  sdmm.h  sdmm_conditioner.h  sdmm_context.h  sdmm_product.h
include/sdmm/linalg/: aabb.h  cholesky.h  coordinate_system.h  epsilon.h  matrix.h  vector.h
include/sdmm/opt/: data.h  em.h  init.h
include/sdmm/spaces/: directional.h  euclidian.h  offset_directional.h  spatio_directional.h
python/: CMakeLists.txt  bindings.cpp  blub.json  bsdf_scraper.ipynb  bsdf_training.ipynb  example.py  plotting.py  product.ipynb  sdmm_phong.ipynb  visualization.ipynb
python/bsdfs/: conductor_none_ggx.sdmm  conductor_none_ggx_4c.sdmm
resources/: CMakeLists.txt
src/: main.cpp
tests/: CMakeLists.txt  comparison.cpp  distributions.cpp  linalg.cpp  matrix.cpp  spaces.cpp  utils.h
